# karkinos

./: .gitignore  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURES.md  README.md  TESTING.md  krk-schema.json
.github/workflows/: build.yml  ci.yml  release-plz.yml  release.yml
example/: cached.krk.yaml  example.krk.yaml  headers.krk.yaml  multi-url.krk.yaml  out.json  pagination-full-url.krk.yaml  pagination-next.krk.yaml  pagination-pattern.krk.yaml  superstore-lego.krk.yaml  transformations.krk.yaml
src/: gen.rs  main.rs  types.rs
