[package]
name = "karkinos"
version = "0.0.1"
edition = "2021"
default-run = "main"
description = "Powerful and flexible web scraper with YAML configuration, supporting pagination, data transformations, caching, and multiple output formats"
license = "MIT"
repository = "https://github.com/ggagosh/karkinos"
keywords = ["scraper", "web-scraping", "html", "parser", "crawler"]
categories = ["web-programming", "command-line-utilities", "parser-implementations"]
authors = ["gagosha <me@gagosha.dev>"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "gen"
path = "src/gen.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0.62"
serde_yaml = "0.9.11"
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
scraper = "0.13.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
html5ever = "0.26.0"
log = "0.4.17"
env_logger = "0.9.0"
linked-hash-map = { version= "0.5.6", features = ["serde_impl"] }
schemars = "0.8.10"
rayon = "1.5"
regex = "1.7"
csv = "1.1"
sha2 = "0.10"
hex = "0.4"
